--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="collapse navbar-collapse text-uppercase" id="ww-navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#events">Events</a></li>
-          <li class="nav-item"><a class="nav-link smooth-scroll" href="https://docs.google.com/forms/d/e/1FAIpQLScu2hP8FPPeSZlLBKhRmWiCWpBdQK84QEIypIN7-RQ2nbFAcQ/viewform">RSVP</a></li>
+          <li class="nav-item"><a class="nav-link smooth-scroll" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLScu2hP8FPPeSZlLBKhRmWiCWpBdQK84QEIypIN7-RQ2nbFAcQ/viewform">RSVP</a></li>
         </ul>
       </div>
     </div>
