--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <noscript>
       <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Great+Vibes&amp;display=swap"/>
     </noscript>
-    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
+    <!-- <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png"> -->
     <link href="css/bootstrap.min.css?ver=1.1.0" rel="stylesheet">
     <link href="css/font-awesome/css/all.min.css?ver=1.1.0" rel="stylesheet">
     <link href="css/aos.css?ver=1.1.0" rel="stylesheet">
@@ -34,7 +34,7 @@
       </style>
     </noscript>
   </head>
-  <body id="top">
+<body id="top">
     <header></header>
     <div class="page-content">
       <div class="div">
@@ -47,6 +47,8 @@
     </div>
   </div>
 </div>
+
+<!-- NAVBAR -->
 <div class="ww-nav-bar sticky-top bg-light">
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container"><a href="#"><path d="M23.6,0c-3.4,0-6.3,2.7-7.6,5.6C14.7,2.7,11.8,0,8.4,0C3.8,0,0,3.8,0,8.4c0,9.4,9.5,11.9,16,21.2c6.1-9.3,16-12.1,16-21.2C32,3.8,28.2,0,23.6,0z"/>
@@ -56,12 +58,15 @@
       <div class="collapse navbar-collapse text-uppercase" id="ww-navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#events">Events</a></li>
+          <li class="nav-item"><a class="nav-link smooth-scroll" href="#couple">Couple</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLScu2hP8FPPeSZlLBKhRmWiCWpBdQK84QEIypIN7-RQ2nbFAcQ/viewform">RSVP</a></li>
         </ul>
       </div>
     </div>
   </nav>
 </div>
+
+<!-- EVENTS -->
 <div class="ww-section bg-light" id="events">
   <div class="container ww-wedding-event">
     <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Wedding Events</h2>
@@ -98,6 +103,28 @@
   </div>
 </div>
 
+<!-- COUPLE -->
+<div class="ww-section" id="couple">
+  <div class="container">
+    <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Groom & Bride</h2>
+    <div class="row text-center">
+      <div class="col-md-6">
+        <div class="mt-3">
+            <h3 class="h2 ww-title">Raymond</h3>
+          <p class="pt-3 text-left text-muted">Hi I am Raymond,Lorem ipsum dolor sit amet consectetur adipiscing, elit nulla enim arcu dictum lobortis, ac congue non hendrerit accumsan. Ut penatibus litora platea mi mus tempus eros proin, maecenas hac eget hendrerit inceptos per tempor sodales, id varius nulla commodo augue lectus pulvinar. Etiam suscipit leo sollicitudin vivamus tempor himenaeos vitae mattis dictum posuere, tincidunt aenean litora aptent facilisis eu est gravida.</p>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="mt-3">
+            <h3 class="h2 ww-title">Susan</h3>
+          <p class="pt-3 text-left text-muted">Hi I am Susan,Lorem ipsum dolor sit amet consectetur adipiscing, elit nulla enim arcu dictum lobortis, ac congue non hendrerit accumsan. Ut penatibus litora platea mi mus tempus eros proin, maecenas hac eget hendrerit inceptos per tempor sodales, id varius nulla commodo augue lectus pulvinar. Etiam suscipit leo sollicitudin vivamus tempor himenaeos vitae mattis dictum posuere, tincidunt aenean litora aptent facilisis eu est gravida.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- FOOTER -->
 <div class="ww-footer bg-light">
   <div class="container text-center py-4">
     <p class="my-0">&copy; Wonderful Wedding. All rights reserved.</p>
