--- a/index.html
+++ b/index.html
@@ -34,16 +34,22 @@
       </style>
     </noscript>
   </head>
+
+
 <body id="top">
     <header></header>
     <div class="page-content">
       <div class="div">
-<div class="ww-home-page" id="home">
-  <div class="ww-wedding-announcement d-flex align-items-center justify-content-start">
-    <div class="container ww-announcement-container">
-      <p class="ww-couple-name ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000">Zachary & Christy</p><img class="img-fluid mt-1" src="images/laurel-1.png" alt="Heart" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000"/>
-      <p class="h2 mt-5 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000" data-aos-offset="10"><sup></sup> May, 2022</p>
-      <!-- <p class="h2 mt-5 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000" data-aos-offset="10">20<sup>TH</sup> May, 2022</p> -->
+
+<!-- HOME -->
+<div id="center">
+  <div class="ww-home-page" id="home">
+    <div class="ww-wedding-announcement d-flex align-items-center ">
+      <div class="container ww-announcement-container">
+        <p class="ww-couple-name ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000">Zachary & Christy</p><img class="img-fluid mt-1" src="images/laurel-2.png" alt="Heart" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000"/>
+        <p class="h2 mt-5 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000" data-aos-offset="10"><sup></sup> May, 2022</p>
+        <!-- <p class="h2 mt-5 ww-title" data-aos="zoom-in-down" data-aos-delay="300" data-aos-duration="1000" data-aos-offset="10">20<sup>TH</sup> May, 2022</p> -->
+      </div>
     </div>
   </div>
 </div>
