--- a/index.html
+++ b/index.html
@@ -64,13 +64,39 @@
       <div class="collapse navbar-collapse text-uppercase" id="ww-navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#events">Events</a></li>
-          <li class="nav-item"><a class="nav-link smooth-scroll" href="#couple">Couple</a></li>
+          <li class="nav-item"><a class="nav-link smooth-scroll" href="#couple">About Couple</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLScu2hP8FPPeSZlLBKhRmWiCWpBdQK84QEIypIN7-RQ2nbFAcQ/viewform">RSVP</a></li>
         </ul>
       </div>
     </div>
   </nav>
 </div>
+
+<!-- COUPLE -->
+<div class="ww-section" id="couple">
+    <div class="container">
+      <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Groom & Bride</h2>
+      <div>
+          <p class="pt-3 text-left">Zachary and Christy met in the Dallas Baptist University Math Lab when Christy joined the college in 2018. They quickly became good friends, and began dating a year later. After two and a half years of dating, Zachary decided to ask Christy's father and pop the question. The engagement happened unexpectedly in the woods on Mountain Creek while Zachary and Christy were enjoying dirt biking in the mud. And the rest is history.
+          </p>
+      </div>
+      <div class="row text-center">
+        <div class="col-md-6">
+          <div class="mt-3">
+              <h3 class="h2 ww-title">Zachary</h3>
+            <p class="pt-3 text-left">Hi I am Zachary,Lorem ipsum dolor sit amet consectetur adipiscing, elit nulla enim arcu dictum lobortis, ac congue non hendrerit accumsan. Ut penatibus litora platea mi mus tempus eros proin, maecenas hac eget hendrerit inceptos per tempor sodales, id varius nulla commodo augue lectus pulvinar. Etiam suscipit leo sollicitudin vivamus tempor himenaeos vitae mattis dictum posuere, tincidunt aenean litora aptent facilisis eu est gravida.</p>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="mt-3">
+              <h3 class="h2 ww-title">Christy</h3>
+            <p class="pt-3 text-left">Christy is a 22-year-old mission kid who grew up overseas in China. She is graduating from Dallas Baptist University in May 2022 with a BBA in Entrepreneurship. She enjoys spending time in the outdoors, creating anything, reading, movies, music, dancing, traveling, animals, people, and most of all- helping others. Her passion for helping others is what inspired her to major in business to help communities through Entrepreneurship in the future.
+              </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
 <!-- EVENTS -->
 <div class="ww-section bg-light" id="events">
@@ -109,26 +135,7 @@
   </div>
 </div>
 
-<!-- COUPLE -->
-<div class="ww-section" id="couple">
-  <div class="container">
-    <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Groom & Bride</h2>
-    <div class="row text-center">
-      <div class="col-md-6">
-        <div class="mt-3">
-            <h3 class="h2 ww-title">Raymond</h3>
-          <p class="pt-3 text-left text-muted">Hi I am Raymond,Lorem ipsum dolor sit amet consectetur adipiscing, elit nulla enim arcu dictum lobortis, ac congue non hendrerit accumsan. Ut penatibus litora platea mi mus tempus eros proin, maecenas hac eget hendrerit inceptos per tempor sodales, id varius nulla commodo augue lectus pulvinar. Etiam suscipit leo sollicitudin vivamus tempor himenaeos vitae mattis dictum posuere, tincidunt aenean litora aptent facilisis eu est gravida.</p>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="mt-3">
-            <h3 class="h2 ww-title">Susan</h3>
-          <p class="pt-3 text-left text-muted">Hi I am Susan,Lorem ipsum dolor sit amet consectetur adipiscing, elit nulla enim arcu dictum lobortis, ac congue non hendrerit accumsan. Ut penatibus litora platea mi mus tempus eros proin, maecenas hac eget hendrerit inceptos per tempor sodales, id varius nulla commodo augue lectus pulvinar. Etiam suscipit leo sollicitudin vivamus tempor himenaeos vitae mattis dictum posuere, tincidunt aenean litora aptent facilisis eu est gravida.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+
 
 <!-- FOOTER -->
 <div class="ww-footer bg-light">
