--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#events">Events</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#couple">About Couple</a></li>
+          <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLScu2hP8FPPeSZlLBKhRmWiCWpBdQK84QEIypIN7-RQ2nbFAcQ/viewform">RSVP</a></li>
         </ul>
       </div>
@@ -105,7 +106,7 @@
     <div class="row">
       <div class="col-md-7 col-sm-12">
         <div class="my-3">
-          <div class="h4">Wedding Party</div>
+          <div class="h4">Ceremony</div>
           <ul>
             <li><i class="text-muted fas fa-map-marker-alt"></i><span class="pl-2 text-muted">Church End, Hendon, London, UK</span></li>
             <li class="pt-2"><i class="text-muted far fa-calendar-alt"></i><span class="pl-2 text-muted">20 Dec 2018, 9AM - 6PM</span></li>
@@ -135,7 +136,18 @@
   </div>
 </div>
 
-
+<!-- CONTACT -->
+<div class="ww-section" id="contact">
+  <div class="container">
+    <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Contact</h2>
+    <div>
+        <p class="pt-3 text-center">
+          email: buskanaka.1975@gmail.com <br/>
+          phone: 972-677-8069
+        </p>
+    </div>
+  </div>
+</div>
 
 <!-- FOOTER -->
 <div class="ww-footer bg-light">
