--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
     <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Contact</h2>
     <div>
         <p class="pt-3 text-center">
-          email: buskanaka.1975@gmail.com <br/>
-          phone: 972-677-8069
+          email: mgviking1997@gmail.com <br/>
+          phone: 682-554-9919
         </p>
     </div>
   </div>
