--- a/index.html
+++ b/index.html
@@ -85,14 +85,15 @@
         <div class="col-md-6">
           <div class="mt-3">
               <h3 class="h2 ww-title">Zachary</h3>
-            <p class="pt-3 text-left">Hi I am Zachary,Lorem ipsum dolor sit amet consectetur adipiscing, elit nulla enim arcu dictum lobortis, ac congue non hendrerit accumsan. Ut penatibus litora platea mi mus tempus eros proin, maecenas hac eget hendrerit inceptos per tempor sodales, id varius nulla commodo augue lectus pulvinar. Etiam suscipit leo sollicitudin vivamus tempor himenaeos vitae mattis dictum posuere, tincidunt aenean litora aptent facilisis eu est gravida.</p>
+            <p class="pt-3 text-left">Zachary is a 23-year-old mission kid who grew up overseas in Papua New Guinea. He graduated from Dallas Baptist University in May 2021 with a BS in Math and Computer Science. He enjoys spending time with friends and family, gaming (especially Smash Ultimate and Halo,) exploring in the outdoors, and swinging on vines. His interest in computer science has led to his current job as a Data Engineer at JP Morgan Bank in Plano. Zachary strives to make a positive difference in the world through his computer science skills.
+            </p>
           </div>
         </div>
         <div class="col-md-6">
           <div class="mt-3">
               <h3 class="h2 ww-title">Christy</h3>
             <p class="pt-3 text-left">Christy is a 22-year-old mission kid who grew up overseas in China. She is graduating from Dallas Baptist University in May 2022 with a BBA in Entrepreneurship. She enjoys spending time in the outdoors, creating anything, reading, movies, music, dancing, traveling, animals, people, and most of all- helping others. Her passion for helping others is what inspired her to major in business to help communities through Entrepreneurship in the future.
-              </p>
+            </p>
           </div>
         </div>
       </div>
@@ -115,7 +116,7 @@
         </div>
       </div>
       <div class="col-md-5 col-sm-12">
-        <div class="my-3"><img class="img-fluid" src="images/wedding-party.jpg" alt="Wedding Party" data-aos="fade-down-right" data-aos-duration="1000"/></div>
+        <div class="my-3"><img class="img-fluid" src="images/lp1.jpg" alt="Wedding Party" data-aos="fade-down-right" data-aos-duration="1000"/></div>
       </div>
     </div>
     <div class="row">
@@ -130,7 +131,7 @@
         </div>
       </div>
       <div class="col-md-5 col-sm-12">
-        <div class="my-3"><img class="img-fluid" src="images/z4.jpeg" alt="Reception" data-aos="fade-up-right" data-aos-duration="1000"/></div>
+        <div class="my-3"><img class="img-fluid" src="images/lp2.jpg" alt="Reception" data-aos="fade-up-right" data-aos-duration="1000"/></div>
       </div>
     </div>
   </div>
