--- a/index.html
+++ b/index.html
@@ -109,10 +109,11 @@
         <div class="my-3">
           <div class="h4">Ceremony</div>
           <ul>
-            <li><i class="text-muted fas fa-map-marker-alt"></i><span class="pl-2 text-muted">Church End, Hendon, London, UK</span></li>
-            <li class="pt-2"><i class="text-muted far fa-calendar-alt"></i><span class="pl-2 text-muted">20 Dec 2018, 9AM - 6PM</span></li>
+            <li><i class="text-muted fas fa-map-marker-alt"></i><span class="pl-2 text-muted">Legacy Pavilion, River Legacy Parks, Arlington, TX</span></li>
+            <li class="pt-2"><i class="text-muted far fa-calendar-alt"></i><span class="pl-2 text-muted">20 Dec 2018, 5PM - 6PM</span></li>
           </ul>
-          <p>Lorem ipsum dolor sit amet consectetur adipiscing, elit nulla enim arcu dictum lobortis, ac congue non hendrerit accumsan. Ut penatibus litora platea mi mus tempus eros proin, maecenas hac eget hendrerit inceptos per tempor sodales, id varius nulla commodo augue lectus pulvinar. Etiam suscipit leo sollicitudin vivamus tempor himenaeos vitae mattis dictum posuere, tincidunt aenean litora aptent facilisis eu est gravida.</p>
+          <p>Come enjoy the joining of two souls in the beautiful display of God's nature and design. The ceremony will last about one hour and will having seating provided. Legacy Pavilion, the crown jewel of Arlington's park system, is located along the banks of the Trinity River in the northwestern section of Arlington. This 1031 acres forest floodplain park is Arlington's segment of a visionary 75-mile greenbelt parkland from west Fort worth through east Dallas. Come and bring your brightest smiles and your Sunday clothes.
+          </p>
         </div>
       </div>
       <div class="col-md-5 col-sm-12">
@@ -124,7 +125,7 @@
         <div class="my-3">
           <div class="h4">Reception</div>
           <ul>
-            <li><i class="text-muted fas fa-map-marker-alt "></i><span class="pl-2 text-muted">City Place, Hendon, London, UK</span></li>
+            <li><i class="text-muted fas fa-map-marker-alt "></i><span class="pl-2 text-muted">Legacy Pavilion, River Legacy Parks, Arlington, TX</span></li>
             <li class="pt-2"><i class="text-muted far fa-calendar-alt "></i><span class="pl-2 text-muted">22 Dec 2018, 11AM - 6PM</span></li>
           </ul>
           <p>Lorem ipsum dolor sit amet consectetur adipiscing, elit nulla enim arcu dictum lobortis, ac congue non hendrerit accumsan. Ut penatibus litora platea mi mus tempus eros proin, maecenas hac eget hendrerit inceptos per tempor sodales, id varius nulla commodo augue lectus pulvinar. Etiam suscipit leo sollicitudin vivamus tempor himenaeos vitae mattis dictum posuere, tincidunt aenean litora aptent facilisis eu est gravida.</p>
