--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <div class="h4">Ceremony</div>
           <ul>
             <li><i class="text-muted fas fa-map-marker-alt"></i><span class="pl-2 text-muted">Legacy Pavilion, River Legacy Parks, Arlington, TX</span></li>
-            <li class="pt-2"><i class="text-muted far fa-calendar-alt"></i><span class="pl-2 text-muted">20 Dec 2018, 5PM - 6PM</span></li>
+            <li class="pt-2"><i class="text-muted far fa-calendar-alt"></i><span class="pl-2 text-muted">28 May 2022, 5PM - 6PM</span></li>
           </ul>
           <p>Come enjoy the joining of two souls in the beautiful display of God's nature and design. The ceremony will last about one hour and will having seating provided. Legacy Pavilion, the crown jewel of Arlington's park system, is located along the banks of the Trinity River in the northwestern section of Arlington. This 1031 acres forest floodplain park is Arlington's segment of a visionary 75-mile greenbelt parkland from west Fort worth through east Dallas. Come and bring your brightest smiles and your Sunday clothes.
           </p>
@@ -126,9 +126,10 @@
           <div class="h4">Reception</div>
           <ul>
             <li><i class="text-muted fas fa-map-marker-alt "></i><span class="pl-2 text-muted">Legacy Pavilion, River Legacy Parks, Arlington, TX</span></li>
-            <li class="pt-2"><i class="text-muted far fa-calendar-alt "></i><span class="pl-2 text-muted">22 Dec 2018, 11AM - 6PM</span></li>
+            <li class="pt-2"><i class="text-muted far fa-calendar-alt "></i><span class="pl-2 text-muted">28 May 2022, 6PM - 9PM</span></li>
           </ul>
-          <p>Lorem ipsum dolor sit amet consectetur adipiscing, elit nulla enim arcu dictum lobortis, ac congue non hendrerit accumsan. Ut penatibus litora platea mi mus tempus eros proin, maecenas hac eget hendrerit inceptos per tempor sodales, id varius nulla commodo augue lectus pulvinar. Etiam suscipit leo sollicitudin vivamus tempor himenaeos vitae mattis dictum posuere, tincidunt aenean litora aptent facilisis eu est gravida.</p>
+          <p>The reception will last around four hours and will include dinner, snacks, drinks (of the non-alcoholic kind,) games, dancing, and lots and lots of fun! The park bathrooms are located a 5-minute walk away, but fancy porta-potties will also be provided on-site. Prepare yourself for a joyous celebration with those who have also invested and inspired the lives of Zachary and Christy!
+          </p>
         </div>
       </div>
       <div class="col-md-5 col-sm-12">
