--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#events">Events</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#couple">About Couple</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
+          <li class="nav-item"><a class="nav-link smooth-scroll" href="https://docs.google.com/document/d/1L-Jvt12JZ9z_QCmuEnod4GIYEqceErPf8099acuNNnc/edit">Registry</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLScu2hP8FPPeSZlLBKhRmWiCWpBdQK84QEIypIN7-RQ2nbFAcQ/viewform">RSVP</a></li>
         </ul>
       </div>
