--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
     <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Contact</h2>
     <div>
         <p class="pt-3 text-center">
-          email: mgviking1997@gmail.com <br/>
-          phone: 682-554-9919
+          Email: mgviking1997@gmail.com <br/>
+          Phone: 682-554-9919
         </p>
     </div>
   </div>
