--- a/registry.html
+++ b/registry.html
@@ -50,9 +50,8 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ww-navbarNav" aria-controls="ww-navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse text-uppercase" id="ww-navbarNav">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a class="nav-link smooth-scroll" href="#events">Events</a></li>
-          <li class="nav-item"><a class="nav-link smooth-scroll" href="#couple">About Couple</a></li>
-          <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
+          <li class="nav-item"><a class="nav-link smooth-scroll" href="index.html">HOME</a></li>
+          <li class="nav-item"><a class="nav-link smooth-scroll" href="index.html">Contact</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="registry.html">Registry</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLScu2hP8FPPeSZlLBKhRmWiCWpBdQK84QEIypIN7-RQ2nbFAcQ/viewform">RSVP</a></li>
         </ul>
