--- a/registry.html
+++ b/registry.html
@@ -51,8 +51,7 @@
       <div class="collapse navbar-collapse text-uppercase" id="ww-navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a class="nav-link smooth-scroll" href="index.html">HOME</a></li>
-          <li class="nav-item"><a class="nav-link smooth-scroll" href="index.html">Contact</a></li>
-          <li class="nav-item"><a class="nav-link smooth-scroll" href="registry.html">Registry</a></li>
+          <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLScu2hP8FPPeSZlLBKhRmWiCWpBdQK84QEIypIN7-RQ2nbFAcQ/viewform">RSVP</a></li>
         </ul>
       </div>
