--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#events">Events</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#couple">About Couple</a></li>
+          <li class="nav-item"><a class="nav-link smooth-scroll" href="gallery.html">Gallery</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="registry.html">Registry</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLScu2hP8FPPeSZlLBKhRmWiCWpBdQK84QEIypIN7-RQ2nbFAcQ/viewform">RSVP</a></li>
@@ -76,6 +77,31 @@
 
 <!-- COUPLE -->
 <div class="ww-section" id="couple">
+  <div class="container">
+    <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Groom & Bride</h2>
+    <div>
+      <p class="pt-3 text-left">Zachary and Christy met in the Dallas Baptist University Math Lab when Christy joined the college in 2018. They quickly became good friends, and began dating a year later. After two and a half years of dating, Zachary decided to ask Christy's father and pop the question. The engagement happened unexpectedly in the woods on Mountain Creek while Zachary and Christy were enjoying dirt biking in the mud. And the rest is history.
+      </p>
+  </div>
+    <div class="row text-center">
+      <div class="col-md-6">
+        <div class="mt-3"><img class="img-fluid" src="images/zach.jpg" alt="Groom" data-aos="flip-left" data-aos-duration="1000"/>
+          <h3 class="h2 ww-title">Zachary</h3>
+            <p class="pt-3 text-left">Zachary is a 23-year-old mission kid who grew up overseas in Papua New Guinea. He graduated from Dallas Baptist University in May 2021 with a BS in Math and Computer Science. He enjoys spending time with friends and family, gaming (especially Smash Ultimate and Halo,) exploring in the outdoors, and swinging on vines. His interest in computer science has led to his current job as a Data Engineer at JP Morgan Bank in Plano. Zachary strives to make a positive difference in the world through his computer science skills.
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="mt-3"><img class="img-fluid" src="images/christy.jpg" alt="Bride" data-aos="flip-right" data-aos-duration="1000"/>
+          <h3 class="h2 ww-title">Christy</h3>
+          <p class="pt-3 text-left">Christy is a 22-year-old mission kid who grew up overseas in China. She is graduating from Dallas Baptist University in May 2022 with a BBA in Entrepreneurship. She enjoys spending time in the outdoors, creating anything, reading, movies, music, dancing, traveling, animals, people, and most of all- helping others. Her passion for helping others is what inspired her to major in business to help communities through Entrepreneurship in the future.
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="ww-section" id="couple">
     <div class="container">
       <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Groom & Bride</h2>
       <div>
@@ -85,6 +111,7 @@
       <div class="row text-center">
         <div class="col-md-6">
           <div class="mt-3">
+            <div class="mt-3"><img class="img-fluid" src="images/zach.JPG" alt="Groom" data-aos="flip-left" data-aos-duration="1000"/>
               <h3 class="h2 ww-title">Zachary</h3>
             <p class="pt-3 text-left">Zachary is a 23-year-old mission kid who grew up overseas in Papua New Guinea. He graduated from Dallas Baptist University in May 2021 with a BS in Math and Computer Science. He enjoys spending time with friends and family, gaming (especially Smash Ultimate and Halo,) exploring in the outdoors, and swinging on vines. His interest in computer science has led to his current job as a Data Engineer at JP Morgan Bank in Plano. Zachary strives to make a positive difference in the world through his computer science skills.
             </p>
@@ -92,6 +119,7 @@
         </div>
         <div class="col-md-6">
           <div class="mt-3">
+            <div class="mt-3"><img class="img-fluid" src="images/christy.jpg" alt="Groom" data-aos="flip-left" data-aos-duration="1000"/>
               <h3 class="h2 ww-title">Christy</h3>
             <p class="pt-3 text-left">Christy is a 22-year-old mission kid who grew up overseas in China. She is graduating from Dallas Baptist University in May 2022 with a BBA in Entrepreneurship. She enjoys spending time in the outdoors, creating anything, reading, movies, music, dancing, traveling, animals, people, and most of all- helping others. Her passion for helping others is what inspired her to major in business to help communities through Entrepreneurship in the future.
             </p>
