--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   </div>
     <div class="row text-center">
       <div class="col-md-6">
-        <div class="mt-3"><img class="img-fluid" src="images/zach.jpg" alt="Groom" data-aos="flip-left" data-aos-duration="1000"/>
+        <div class="mt-3"><img class="img-fluid" src="images/zach.JPG" alt="Groom" data-aos="flip-left" data-aos-duration="1000"/>
           <h3 class="h2 ww-title">Zachary</h3>
             <p class="pt-3 text-left">Zachary is a 23-year-old mission kid who grew up overseas in Papua New Guinea. He graduated from Dallas Baptist University in May 2021 with a BS in Math and Computer Science. He enjoys spending time with friends and family, gaming (especially Smash Ultimate and Halo,) exploring in the outdoors, and swinging on vines. His interest in computer science has led to his current job as a Data Engineer at JP Morgan Bank in Plano. Zachary strives to make a positive difference in the world through his computer science skills.
         </div>
